--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,6 @@ out/
 
 # Go best practices dictate that libraries should not include the vendor directory
 vendor
+
+# Folder used to store temporary test data by Terratest
+.test-data
