--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,6 @@
+workspace_root: &workspace_root /go/src/github.com/hashicorp/terraform-aws-consul
 defaults: &defaults
+  working_directory: *workspace_root
   docker:
     - image: 087285199408.dkr.ecr.us-east-1.amazonaws.com/circle-ci-test-image-base:latest
   #machine:
@@ -44,7 +46,9 @@ jobs:
     <<: *defaults
     steps:
       - checkout
-      
+      - attach_workspace:
+          at: *workspace_root
+
       - restore_cache:
           keys:
             - dep-v2-{{ checksum "test/Gopkg.lock" }}
@@ -56,6 +60,10 @@ jobs:
           key: dep-v2-{{ checksum "test/Gopkg.lock" }}
           paths:
             - /go/src/github.com/hashicorp/terraform-aws-nomad/test/vendor
+      
+      - persist_to_workspace:
+          root: *workspace_root
+          paths: test/vendor
 
       - run:
           name: create log directory
