--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,14 +1,12 @@
 defaults: &defaults
   docker:
-    - image: 087285199408.dkr.ecr.us-east-1.amazonaws.com/circle-ci-test-image-base:tf13.4
-
+    - image: 087285199408.dkr.ecr.us-east-1.amazonaws.com/circle-ci-test-image-base:go1.16-go111module
 version: 2
 jobs:
   test:
     <<: *defaults
     steps:
       - checkout
-
       - run:
           # Fail the build if the pre-commit hooks don't pass. Note: if you run $ pre-commit install locally within this repo, these hooks will
           # execute automatically every time before you commit, ensuring the build never fails at this step!
@@ -17,21 +15,17 @@ jobs:
             pip install pre-commit==1.21.0 cfgv==2.0.1
             pre-commit install
             pre-commit run --all-files
-
       - run:
           name: create log directory
           command: mkdir -p /tmp/logs
-
       - run:
           name: run tests
           command: run-go-tests --path test --timeout 2h | tee /tmp/logs/all.log
           no_output_timeout: 3600s
-
       - store_artifacts:
           path: /tmp/logs
       - store_test_results:
-          path: /tmp/logs      
-
+          path: /tmp/logs
   deploy:
     <<: *defaults
     steps:
@@ -40,14 +34,12 @@ jobs:
       - run: sudo -E gruntwork-install --module-name "aws-helpers" --repo "https://github.com/gruntwork-io/module-ci" --tag "v0.29.0"
       - run: sudo -E gruntwork-install --module-name "git-helpers" --repo "https://github.com/gruntwork-io/module-ci" --tag "v0.29.0"
       - run: sudo -E gruntwork-install --module-name "build-helpers" --repo "https://github.com/gruntwork-io/module-ci" --tag "v0.29.0"
-
       # We generally only want to build AMIs on new releases, but when we are setting up AMIs in a new account for the
       # first time, we want to build the AMIs but NOT run automated tests, since those tests will fail without an existing
       # AMI already in the AWS Account.
       - run: _ci/publish-amis.sh "ubuntu16-ami"
       - run: _ci/publish-amis.sh "ubuntu18-ami"
       - run: _ci/publish-amis.sh "amazon-linux-2-ami"
-
 workflows:
   version: 2
   build-and-test:
